# cmake_example

./: CMakeLists.txt  CMakeSettings.json
src/: CMakeLists.txt  main.cpp  other_func.cpp  other_func.h
test/: CMakeLists.txt  example_test_1.cpp
